--- a/zhongguoyidong/css/index.css
+++ b/zhongguoyidong/css/index.css
@@ -104,7 +104,7 @@ body{font-size:12px; font-family:"宋体";color:#333;}
 .content1 a{font-size:18px;color:#333;}
 .content2{width:265px;height:20px;padding:0 0 0 20px;}
 .content2 a{font-size:14px;color:#666;}
-.content3{width:235px;height:110px;background:red;margin-left:50px;}
+.content3{width:235px;height:110px;margin-left:50px;}
 .content3 a{display:block;}
 .indexbox2{width:285px;height:160px;background:#fff;float:left;margin-left:10px;margin-top:10px;margin-bottom:10px;}
 .content1{width:265px;height:24px;padding:6px 0 0 20px;}
