--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -98,7 +98,7 @@ body input[type="text"],body input[type="submit"],body textarea,body input[type=
     font-size:2.5em;
 }
 .bannerhead p{
-    color:#F1E9F2;
+    color:#000;
 }
 a.downarrow  span{
  	height:48px;
@@ -210,7 +210,7 @@ a.arrow{
 }
 .skill{
     color: #F1F0F0;
-    font-size: 18px;
+    font-size: 16px;
     text-align: left;
     line-height: 30px;
 }
