--- a/resume/css/index.css
+++ b/resume/css/index.css
@@ -93,7 +93,7 @@ body input[type="text"],body input[type="submit"],body textarea,body input[type=
     font-size:2.5em;
 }
 .bannerhead p{
-    color:#000;
+    color: #000;
 }
 a.downarrow  span{
  	height:48px;
@@ -264,6 +264,7 @@ a.down{
 	display:inline-block;
 }
 .portfolio-grid p{
+	/*margin:0em 1em 0 1em;*/
 	color:#504A4C;
 	line-height:25px;
 }
@@ -335,6 +336,7 @@ a.portdown{
 	line-height:2em;
 }
 .footer-right{
+	/*text-align: right;*/
 	margin-top: 1.3em;
 }
 .footer-right .tel{
@@ -429,6 +431,9 @@ p.copy-right a{
  	.years p {
 		width: 60%;
 	}
+	/*.portfolio-grid p {*/
+		/*margin: 0.2em 0em 0 0em;*/
+	/*}*/
 	.footer-left p {
 		width: 90%;
 	}
@@ -440,6 +445,9 @@ p.copy-right a{
  	.years p {
 		width: 80%;
 	}
+	/*.portfolio-grid p {*/
+		/*margin: 0.2em 0em 0 0em;*/
+	/*}*/
 	.footer-left p {
 		width: 90%;
 	}
@@ -449,6 +457,9 @@ p.copy-right a{
     .footer-right .tel{
         width: 87%;
     }
+	/*.footer-right input[type="text"], .footer-right textarea {*/
+		/*width: 87%;*/
+	/*}*/
 	.headerbg {
 		min-height: 591px;
 	}
@@ -473,6 +484,9 @@ p.copy-right a{
  	.years p {
 		width: 80%;
 	}
+	/*.portfolio-grid p {*/
+		/*margin: 2em 0em 0 0em;*/
+	/*}*/
 	.footer-left p {
 		width: 90%;
 	}
@@ -482,6 +496,9 @@ p.copy-right a{
     .footer-right .tel{
         width: 100%;
     }
+	/*.footer-right input[type="text"], .footer-right textarea {*/
+		/*width: 100%;*/
+	/*}*/
 	.headerbg {
 		min-height:500px;
 	}
@@ -552,6 +569,9 @@ p.copy-right a{
  	.years p {
 		width: 100%;
 	}
+	/*.portfolio-grid p {*/
+		/*margin: 2em 0em 0 0em;*/
+	/*}*/
 	.footer-left p {
 		width: 90%;
 	}
@@ -651,6 +671,9 @@ p.copy-right a{
 		line-height: 1.6em;
 		padding: 0.5em 0 0 0;
 	}
+	/*.portfolio-grid p {*/
+		/*margin: 2em 0em 0 0em;*/
+	/*}*/
 	.footer-left p {
 		width: 100%;
 		margin: 0.8em 0 0 0;
@@ -661,6 +684,9 @@ p.copy-right a{
     .footer-right .tel{
         width: 100%;
     }
+	/*.footer-right input[type="text"], .footer-right textarea {*/
+		/*width: 100%;*/
+	/*}*/
 	.headerbg {
 		min-height: 457px;
 	}
@@ -775,6 +801,10 @@ p.copy-right a{
 		line-height: 1.6em;
 		padding: 0.5em 0 0 0;
 	}
+	/*.portfolio-grid p {*/
+		/*margin: 1.2em 0em 0 0em;*/
+		/*line-height: 1.5em;*/
+	/*}*/
 	.footer-left p {
 		width: 100%;
 		margin: 0.8em 0 0 0;
@@ -786,6 +816,10 @@ p.copy-right a{
         width: 100%;
         padding: 0.8em;
     }
+	/*.footer-right input[type="text"], .footer-right textarea {*/
+		/*width: 100%;*/
+		/*padding: 0.8em;*/
+	/*}*/
 	.headerbg {
 		min-height: 409px;
 	}
